rbx_xml/src/tests/snapshots/rbx_xml__tests__content-mixed__encoded.snap
---
source: rbx_xml/src/tests/mod.rs
expression: encoded_text
---
<roblox version="4">
  <Item class="Decal" referent="0">
    <Properties>
      <string name="Name">Decal_None</string>
      <BinaryString name="AttributesSerialize"></BinaryString>
      <SecurityCapabilities name="Capabilities">0</SecurityCapabilities>
      <Color3 name="Color3">
        <R>1</R>
        <G>1</G>
        <B>1</B>
      </Color3>
      <token name="Face">5</token>
      <bool name="DefinesCapabilities">false</bool>
      <int64 name="SourceAssetId">-1</int64>
      <BinaryString name="Tags"></BinaryString>
      <Content name="TextureContent">
        <null>
        </null>
      </Content>
      <float name="Transparency">0</float>
      <int name="ZIndex">1</int>
    </Properties>
  </Item>
  <Item class="Decal" referent="1">
    <Properties>
      <string name="Name">Decal_SpawnLocation</string>
      <BinaryString name="AttributesSerialize"></BinaryString>
      <SecurityCapabilities name="Capabilities">0</SecurityCapabilities>
      <Color3 name="Color3">
        <R>1</R>
        <G>1</G>
        <B>1</B>
      </Color3>
      <token name="Face">5</token>
      <bool name="DefinesCapabilities">false</bool>
      <int64 name="SourceAssetId">-1</int64>
      <BinaryString name="Tags"></BinaryString>
      <Content name="TextureContent">
        <uri>rbxasset://textures/SpawnLocation.png</uri>
      </Content>
      <float name="Transparency">0</float>
      <int name="ZIndex">1</int>
    </Properties>
  </Item>
  <Item class="ImageLabel" referent="2">
    <Properties>
      <string name="Name">ImageLabel_None</string>
      <bool name="Active">false</bool>
      <Vector2 name="AnchorPoint">
        <X>0</X>
        <Y>0</Y>
      </Vector2>
      <BinaryString name="AttributesSerialize"></BinaryString>
      <bool name="AutoLocalize">true</bool>
      <token name="AutomaticSize">0</token>
      <Color3 name="BackgroundColor3">
        <R>1</R>
        <G>1</G>
        <B>1</B>
      </Color3>
      <float name="BackgroundTransparency">0</float>
      <Color3 name="BorderColor3">
        <R>0</R>
        <G>0</G>
        <B>0</B>
      </Color3>
      <token name="BorderMode">0</token>
      <int name="BorderSizePixel">0</int>
      <SecurityCapabilities name="Capabilities">0</SecurityCapabilities>
      <bool name="ClipsDescendants">false</bool>
      <bool name="Draggable">false</bool>
      <Color3 name="ImageColor3">
        <R>1</R>
        <G>1</G>
        <B>1</B>
      </Color3>
      <Content name="ImageContent">
        <null>
        </null>
      </Content>
      <Vector2 name="ImageRectOffset">
        <X>0</X>
        <Y>0</Y>
      </Vector2>
      <Vector2 name="ImageRectSize">
        <X>0</X>
        <Y>0</Y>
      </Vector2>
      <float name="ImageTransparency">0</float>
      <bool name="Interactable">true</bool>
      <int name="LayoutOrder">0</int>
      <Ref name="NextSelectionDown">null</Ref>
      <Ref name="NextSelectionLeft">null</Ref>
      <Ref name="NextSelectionRight">null</Ref>
      <Ref name="NextSelectionUp">null</Ref>
      <UDim2 name="Position">
        <XS>0</XS>
        <XO>0</XO>
        <YS>0</YS>
        <YO>0</YO>
      </UDim2>
      <token name="ResampleMode">0</token>
      <Ref name="RootLocalizationTable">null</Ref>
      <float name="Rotation">0</float>
      <bool name="DefinesCapabilities">false</bool>
      <token name="ScaleType">0</token>
      <bool name="Selectable">false</bool>
      <token name="SelectionBehaviorDown">0</token>
      <token name="SelectionBehaviorLeft">0</token>
      <token name="SelectionBehaviorRight">0</token>
      <token name="SelectionBehaviorUp">0</token>
      <bool name="SelectionGroup">false</bool>
      <Ref name="SelectionImageObject">null</Ref>
      <int name="SelectionOrder">0</int>
      <UDim2 name="Size">
        <XS>0</XS>
        <XO>100</XO>
        <YS>0</YS>
        <YO>100</YO>
      </UDim2>
      <token name="SizeConstraint">0</token>
      <Rect2D name="SliceCenter">
        <min>
          <X>0</X>
          <Y>0</Y>
        </min>
        <max>
          <X>0</X>
          <Y>0</Y>
        </max>
      </Rect2D>
      <float name="SliceScale">1</float>
      <int64 name="SourceAssetId">-1</int64>
      <BinaryString name="Tags"></BinaryString>
      <UDim2 name="TileSize">
        <XS>1</XS>
        <XO>0</XO>
        <YS>1</YS>
        <YO>0</YO>
      </UDim2>
      <bool name="Visible">true</bool>
      <int name="ZIndex">1</int>
    </Properties>
  </Item>
  <Item class="ImageLabel" referent="3">
    <Properties>
      <string name="Name">ImageLabel_SpawnLocation</string>
      <bool name="Active">false</bool>
      <Vector2 name="AnchorPoint">
        <X>0</X>
        <Y>0</Y>
      </Vector2>
      <BinaryString name="AttributesSerialize"></BinaryString>
      <bool name="AutoLocalize">true</bool>
      <token name="AutomaticSize">0</token>
      <Color3 name="BackgroundColor3">
        <R>1</R>
        <G>1</G>
        <B>1</B>
      </Color3>
      <float name="BackgroundTransparency">0</float>
      <Color3 name="BorderColor3">
        <R>0</R>
        <G>0</G>
        <B>0</B>
      </Color3>
      <token name="BorderMode">0</token>
      <int name="BorderSizePixel">0</int>
      <SecurityCapabilities name="Capabilities">0</SecurityCapabilities>
      <bool name="ClipsDescendants">false</bool>
      <bool name="Draggable">false</bool>
      <Color3 name="ImageColor3">
        <R>1</R>
        <G>1</G>
        <B>1</B>
      </Color3>
      <Content name="ImageContent">
        <uri>rbxasset://textures/SpawnLocation.png</uri>
      </Content>
      <Vector2 name="ImageRectOffset">
        <X>0</X>
        <Y>0</Y>
      </Vector2>
      <Vector2 name="ImageRectSize">
        <X>0</X>
        <Y>0</Y>
      </Vector2>
      <float name="ImageTransparency">0</float>
      <bool name="Interactable">true</bool>
      <int name="LayoutOrder">0</int>
      <Ref name="NextSelectionDown">null</Ref>
      <Ref name="NextSelectionLeft">null</Ref>
      <Ref name="NextSelectionRight">null</Ref>
      <Ref name="NextSelectionUp">null</Ref>
      <UDim2 name="Position">
        <XS>0</XS>
        <XO>0</XO>
        <YS>0</YS>
        <YO>0</YO>
      </UDim2>
      <token name="ResampleMode">0</token>
      <Ref name="RootLocalizationTable">null</Ref>
      <float name="Rotation">0</float>
      <bool name="DefinesCapabilities">false</bool>
      <token name="ScaleType">0</token>
      <bool name="Selectable">false</bool>
      <token name="SelectionBehaviorDown">0</token>
      <token name="SelectionBehaviorLeft">0</token>
      <token name="SelectionBehaviorRight">0</token>
      <token name="SelectionBehaviorUp">0</token>
      <bool name="SelectionGroup">false</bool>
      <Ref name="SelectionImageObject">null</Ref>
      <int name="SelectionOrder">0</int>
      <UDim2 name="Size">
        <XS>0</XS>
        <XO>100</XO>
        <YS>0</YS>
        <YO>100</YO>
      </UDim2>
      <token name="SizeConstraint">0</token>
      <Rect2D name="SliceCenter">
        <min>
          <X>0</X>
          <Y>0</Y>
        </min>
        <max>
          <X>0</X>
          <Y>0</Y>
        </max>
      </Rect2D>
      <float name="SliceScale">1</float>
      <int64 name="SourceAssetId">-1</int64>
      <BinaryString name="Tags"></BinaryString>
      <UDim2 name="TileSize">
        <XS>1</XS>
        <XO>0</XO>
        <YS>1</YS>
        <YO>0</YO>
      </UDim2>
      <bool name="Visible">true</bool>
      <int name="ZIndex">1</int>
    </Properties>
  </Item>
</roblox>
